# simple_flow_matching

./: README.md  pyproject.toml
notebooks/: flow_matching_2D.ipynb  mnist.ipynb  mnist_dit.ipynb  mnist_mixer.ipynb  mnist_unet_mixer.ipynb  standalone_flow_matching.ipynb
